--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+{% load staticfiles %}
 
 <div class="card-body box-profile">
                 <h3 class="profile-username text-center">{{ user.get_full_name }}</h3>
