--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -78,11 +78,7 @@
 </head>
 <body class="skin-blue sidebar-mini" style="height: auto; min-height: 100%;">
     <div class="wrapper" style="height: auto; min-height: 100%;">
-
-      <!-- Main Header -->
       <header class="main-header">
-
-        <!-- Logo -->
           <a href="/" class="logo">
             {% comment %} <img src="{% static "img/jinr.png" %}" class="brand-image img-circle elevation-3" style="opacity: .8"> {% endcomment %}
               <!-- mini logo for sidebar mini 50x50 pixels -->
@@ -90,45 +86,25 @@
               <!-- logo for regular state and mobile devices -->
               <span class="logo-lg"><img src="{% static "img/jinr.png" %}" class="brand-image"><b>JINR</b>ex</span>
           </a>
-<!--
-        <div class="login-logo">
-            <a href="/">System of organization and accounting of excursions in <b>JINR</b></a>
-        </div>
--->
-
-        <!-- Header Navbar -->
         <nav class="navbar navbar-static-top" role="navigation">
-          <!-- Sidebar toggle button-->
             <a data-toggle="push-menu" role="button"><i class="fas fa-bars"></i></a>
-          <!-- Navbar Right Menu -->
-
         </nav>
       </header>
       <div class="control-sidebar-bg"></div>
     </div>
-
-    <!-- Left side column. contains the logo and sidebar -->
       <aside class="main-sidebar sidebar-dark-primary">
-
-        <!-- sidebar: style can be found in sidebar.less -->
         <section class="sidebar">
-
-        <!-- Sidebar user panel (optional) -->
           {% if user.is_authenticated %}
             <div class="user-panel">
               <div>
-                  <a href="{% url 'app:profile' request.user.id %}">{{ user.get_full_name }}</a>
-                <!-- Status -->
-                <br><small><a href="#"><i class="fa fa-circle text-success"></i> Online</a></small>
+                  <a href="{% url 'app:show_profile_page' %}">{{ user.get_full_name }}</a>
+                  <br><small><a href="#"><i class="fa fa-circle text-success"></i> Online</a></small>
               </div>
             </div>
           {% endif %}
-
-          <!-- Sidebar Menu -->
           <nav class="mt-2">
             <ul class="sidebar-menu tree" data-widget="tree">
                 <li class="header">NAVIGATION</li>
-                <!-- Optionally, you can add icons to the links -->
                 <li><a href="{% url 'app:get_excursion_form' %}"><i class="fa fa-edit"></i> <span>Apply an application</span></a></li>
                 <li><a href="{% url 'app:view_excursions' %}"><i class="fa fa-calendar-alt"></i> <span>View all applications</span></a></li>
                 <li><a href="{% url 'app:view_calendar' %}"><i class="fa fa-calendar-alt"></i> <span>Calendar</span></a></li>
@@ -149,13 +125,9 @@
             </ul>
           </nav>
         </section>
-        <!-- /.sidebar -->
       </aside>
 
-      <!-- Content Wrapper. Contains page content -->
       <div class="content-wrapper" style="min-height: 298px;">
-        <!-- Main content -->
-        <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
             System of organization and accounting of excursions in <b>JINR</b>
@@ -165,7 +137,6 @@
           {% block content %}
             {% endblock %}
         </div>
-        <!-- /.content -->
       </div>
 
     <!-- REQUIRED JS SCRIPTS -->
