Added return data from get_excursion_form view to any html template

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -105,7 +105,7 @@
           <nav class="mt-2">
             <ul class="sidebar-menu tree" data-widget="tree">
                 <li class="header">NAVIGATION</li>
-                <li><a href="{% url 'app:get_excursion_form' %}"><i class="fa fa-edit"></i> <span>Apply an application</span></a></li>
+                <li><a href="{% url 'app:get_excursion_form' name_of_page='excursion_form.html' %}"><i class="fa fa-edit"></i> <span>Apply an application</span></a></li>
                 <li><a href="{% url 'app:view_excursions' %}"><i class="fa fa-calendar-alt"></i> <span>View all applications</span></a></li>
                 <li><a href="{% url 'app:view_calendar' %}"><i class="fa fa-calendar-alt"></i> <span>Calendar</span></a></li>
               <li class="treeview">
