--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -133,7 +133,7 @@
           {% if user.is_authenticated %}
             <div class="user-panel">
               <div>
-                  <a href="{% url 'app:profile' request.user.id %}">{{ user.get_full_name }}</a>
+                  <a href="{% url 'app:profile' %}">{{ user.get_full_name }}</a>
                 <!-- Status -->
                 <br><small><a href="#"><i class="fa fa-circle text-success"></i> Online</a></small>
               </div>
