Added Calendar + some code and design improvements

--- a/app/templates/base_logout.html
+++ b/app/templates/base_logout.html
@@ -49,25 +49,12 @@
       <header class="main-header">
 
         <!-- Logo -->
-          <a href="index2.html" class="logo">
+          <a href="#" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"></span>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg"><b>JINR</b>ex</span>
     </a>
-<!--
-        <div class="login-logo">
-            <a href="/">System of organization and accounting of excursions in <b>JINR</b></a>
-        </div>
--->
-
-        <!-- Header Navbar -->
-        <nav class="navbar navbar-static-top" role="navigation">
-          <!-- Sidebar toggle button-->
-            <a data-toggle="push-menu" role="button"><i class="fas fa-bars"></i></a>
-          <!-- Navbar Right Menu -->
-          
-        </nav>
       </header>
       
       <!-- /.content-wrapper -->
