--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -1,6 +1,6 @@
-{% extends "base_generic.html" %}
-{% load crispy_forms_tags %}
+{% extends "base_logout.html" %}
 {% block content %}
+{% load crispy_forms_tags %}
 
 <div class="login-box">
   <!-- /.login-logo -->
