--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,66 +69,47 @@
     <!-- TimePicker -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/css/bootstrap-timepicker.css">
     <!-- Добавление дополнительного статического CSS файла -->
-    <link   href="{%  static 'css/skins/skin-blue.min.css' %}" rel="stylesheet">
-    <link   href="{%  static 'css/clockpicker.css' %}" rel="stylesheet">
-    <link   href="{%  static 'css/standalone.css' %}" rel="stylesheet">
-    <link   href="{%  static 'css/dataTables.bootstrap4.css' %}" rel="stylesheet">
-    <!-- jQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link href="{%  static 'css/skins/skin-blue.min.css' %}" rel="stylesheet">
+    <link href="{%  static 'css/clockpicker.css' %}" rel="stylesheet">
+    <link href="{%  static 'css/standalone.css' %}" rel="stylesheet">
+    <link href="{%  static 'css/dataTables.bootstrap4.css' %}" rel="stylesheet">
+    <!-- Full Calendar -->
+    <link href="{%  static 'css/fullcalendar.min.css' %}" rel="stylesheet">
+    <!-- AdminLTE App -->
+    <link href="{%  static 'css/adminlte.min.css' %}" rel="stylesheet">
+    <!-- JQuery JS Script -->
+    <script src="{% static 'js/jquery-3.4.1.min.js' %}" type="text/javascript"></script>
+    
 </head>
 <body class="skin-blue sidebar-mini" style="height: auto; min-height: 100%;">
-    <div class="wrapper" style="height: auto; min-height: 100%;">
-
-      <!-- Main Header -->
-      <header class="main-header">
-
-        <!-- Logo -->
-          <a href="/" class="logo">
-            {% comment %} <img src="{% static "img/jinr.png" %}" class="brand-image img-circle elevation-3" style="opacity: .8"> {% endcomment %}
-              <!-- mini logo for sidebar mini 50x50 pixels -->
-              <span class="logo-mini"><img src="{% static "img/jinr.png" %}" class="brand-image"></span>
-              <!-- logo for regular state and mobile devices -->
-              <span class="logo-lg"><img src="{% static "img/jinr.png" %}" class="brand-image"><b>JINR</b>ex</span>
-          </a>
-<!--
-        <div class="login-logo">
-            <a href="/">System of organization and accounting of excursions in <b>JINR</b></a>
-        </div>
--->
-
+    <div class="content-wrapper" style="height: auto; min-height: 100%;">
         <!-- Header Navbar -->
-        <nav class="navbar navbar-static-top" role="navigation">
-          <!-- Sidebar toggle button-->
-            <a data-toggle="push-menu" role="button"><i class="fas fa-bars"></i></a>
-          <!-- Navbar Right Menu -->
-
+        <nav class="navbar navbar-expand navbar-white navbar-light pushmenu pushmenu-left" role="navigation">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
+            </li>
+            <li class="nav-item d-none d-sm-inline-block">
+              <a href="/" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item d-none d-sm-inline-block">
+              <a href="#" class="nav-link">Contact</a>
+            </li>
+          </ul>
         </nav>
-      </header>
-
-      <!-- /.content-wrapper -->
-
-      <!-- Main Footer -->
-<!--      <footer class="main-footer">-->
-        <!-- To the right -->
-<!--        <div class="pull-right hidden-xs">-->
-<!--          Anything you want-->
-<!--        </div>-->
-        <!-- Default to the left -->
-<!--        <strong>JINRex <a href="#">Company</a>.</strong> All rights reserved.-->
-<!--      </footer>-->
-
-
-      <!-- Add the sidebar's background. This div must be placed
-      immediately after the control sidebar -->
-      <div class="control-sidebar-bg"></div>
-    </div>
+    
 
     <!-- Left side column. contains the logo and sidebar -->
-      <aside class="main-sidebar sidebar-dark-primary">
-
-        <!-- sidebar: style can be found in sidebar.less -->
+      <aside class="main-sidebar sidebar-dark-primary" style="padding: 0;">
+        <!-- Logo -->
+        <a href="/" class="brand-link">
+          <img src="{% static 'img/jinr.png' %}" class="brand-image img-circle elevation-3" style="opacity: .8">
+          <span class="brand-text font-weight-light"><b>JINR</b>ex</span>
+          <br><badge class="text-muted text-wrap" style="font-size: small;">
+            System of organization and accounting of excursions in <b>JINR</b>
+        </badge>
+        </a>
         <section class="sidebar">
-
         <!-- Sidebar user panel (optional) -->
           {% if user.is_authenticated %}
             <div class="user-panel">
@@ -161,47 +142,48 @@
                 </ul>
               </li>
                 <li class="header">ACTIONS</li>
-                <li><a href="{% url 'logout'%}?next={{request.path}}"><i class="fa fa-sign-out-alt"></i> <span>Logout</span></a></li>
+                <li><a href="{% url 'logout'%}?next={{ request.path }}"><i class="fa fa-sign-out-alt"></i> <span>Logout</span></a></li>
             </ul>
           </nav>
         </section>
         <!-- /.sidebar -->
       </aside>
-
-      <!-- Content Wrapper. Contains page content -->
-      <div class="content-wrapper" style="min-height: 298px;">
         <!-- Main content -->
-        <!-- Content Header (Page header) -->
-        <section class="content-header">
-          <h1>
-            System of organization and accounting of excursions in <b>JINR</b>
-          </h1>
-        </section>
         <div class="content container-fluid">
           {% block content %}
             {% endblock %}
         </div>
         <!-- /.content -->
-      </div>
+    </div>
 
     <!-- REQUIRED JS SCRIPTS -->
+    <!-- JQuery UI -->
+    <script src="{% static 'js/jquery-ui.min.js' %}" type="text/javascript"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
     <!-- Bootstrap 4 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
     <!-- AdminLTE App -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.18/js/adminlte.min.js"></script>
-
+    <script src="{% static 'js/adminlte.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/app.js' %}" type="text/javascript"></script>
     <!-- Angular -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.min.js"></script>
     <!-- DataTables -->
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.10.18/af-2.3.3/b-1.5.6/b-colvis-1.5.6/b-flash-1.5.6/b-html5-1.5.6/b-print-1.5.6/cr-1.5.0/fc-3.2.5/fh-3.1.4/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sc-2.0.0/sl-1.3.0/datatables.min.js"></script>
+    <!-- ClockPicker -->
+    <script src="{% static 'js/clockpicker.js' %}" type="text/javascript"></script>
     <!-- DatePicker Script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.js"></script>
     <!-- TimePicker Script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/js/bootstrap-timepicker.js"></script>
-
-    <script>
-        $('.sidebar-toggle-btn').pushMenu()
-    </script>
+    <!-- DataTables -->
+    <script src="{% static 'js/jquery.dataTables.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/dataTables.bootstrap4.js' %}" type="text/javascript"></script>
+    <!-- Charts -->
+    <script src="{% static 'js/Chart.min.js' %}" type="text/javascript"></script>
+    <!-- Full Calendar -->
+    <script src="{% static 'js/moment.js' %}" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js"></script>
     <script>
             var AdminLTEOptions = {
               //Enable sidebar expand on hover effect for sidebar mini
@@ -214,10 +196,5 @@
               enableBSToppltip: true
             };
     </script>
-    <script src="{% static 'js/app.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/clockpicker.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/jquery.dataTables.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/dataTables.bootstrap4.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/Chart.min.js' %}" type="text/javascript"></script>
     </body>
 </html>
